--- a/EinzelhandelCoreMVC/Views/Shared/_Layout.cshtml
+++ b/EinzelhandelCoreMVC/Views/Shared/_Layout.cshtml
@@ -34,6 +34,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li  class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Produktarts" asp-action="Index">Produktart</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Produkts" asp-action="Index">Produkt</a>
+                        </li>
                     </ul>
                 </div>
             </div>
