--- a/EinzelhandelCoreMVC/Views/Produkts/Index.cshtml
+++ b/EinzelhandelCoreMVC/Views/Produkts/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<EinzelhandelCoreMVC.Models.Produkt>
+﻿@model IEnumerable<EinzelhandelCoreMVC.ModelView.ProduktDetail>
 
 @{
     ViewData["Title"] = "Index";
@@ -18,6 +18,8 @@
             <th>
                 @Html.DisplayNameFor(model => model.Zahl)
             </th>
+            <th>
+                @Html.DisplayNameFor(model=> model.ProduktartTitel)
             <th></th>
         </tr>
     </thead>
@@ -29,6 +31,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Zahl)
+            </td>
+            <td>
+                @Html.DisplayNameFor(modelItem=>item.ProduktartTitel)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
