--- a/EinzelhandelCoreMVC/Views/Produkts/Details.cshtml
+++ b/EinzelhandelCoreMVC/Views/Produkts/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model EinzelhandelCoreMVC.Models.Produkt
+﻿@model EinzelhandelCoreMVC.ModelView.ProduktDetail
 
 @{
     ViewData["Title"] = "Details";
@@ -22,6 +22,13 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Zahl)
         </dd>
+        <dt class="col-sm-2">
+            @Html.LabelFor(model => model.ProduktartID)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.ProduktartTitel)
+        </dd>
+
     </dl>
 </div>
 <div>
