--- a/EinzelhandelCoreMVC/Views/Produkts/Edit.cshtml
+++ b/EinzelhandelCoreMVC/Views/Produkts/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model EinzelhandelCoreMVC.Models.Produkt
+﻿@model EinzelhandelCoreMVC.ModelView.ProduktDetail
 
 @{
     ViewData["Title"] = "Edit";
@@ -22,6 +22,13 @@
                 <label asp-for="Zahl" class="control-label"></label>
                 <input asp-for="Zahl" class="form-control" />
                 <span asp-validation-for="Zahl" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(x => Model.ProduktartID, htmlAttributes: new { @class = "control-label col-md-2" })
+
+                @Html.DropDownListFor(x => Model.ProduktartID, new SelectList(Model.Produktarts, "Value", "Text"), htmlAttributes: new { @class = "form-control", id = "ProduktartID" })
+                @Html.ValidationMessageFor(x => x.ProduktartID, "", new { @class = "text-danger" })
+
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
