--- a/EinzelhandelCoreMVC/Views/Produkts/Index.cshtml
+++ b/EinzelhandelCoreMVC/Views/Produkts/Index.cshtml
@@ -2,45 +2,118 @@
 
 @{
     ViewData["Title"] = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+@section css {
+    <style>
+        .filter-table .quick {
+            margin-left: 0.5em;
+            font-size: 0.8em;
+            text-decoration: none;
+        }
 
-<h1>Index</h1>
+        .fitler-table .quick:hover {
+            text-decoration: underline;
+        }
+
+        td.alt {
+            background-color: #ffc;
+            background-color: rgba(255, 255, 0, 0.2);
+        }
+    </style>
+}
+<h2>MVC Grid</h2>
 
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Titel)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Zahl)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model=> model.ProduktartTitel)
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Titel)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Zahl)
-            </td>
-            <td>
-                @Html.DisplayNameFor(modelItem=>item.ProduktartTitel)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
-            </td>
-        </tr>
+
+
+<p>
+    @Html.ActionLink("All Employee Data", "GetAllEmployeeData")
+</p>
+<a class="nav-link text-dark" asp-area="" asp-controller="Produkt" asp-action="GetAllEmployeeData">GetAllEmployeeData11</a>
+<div class="col-md-1">
+    <select id="ddlFilterColumns" class="form-control input-sm">
+        <option value="">All Columns</option>
+        <option value="0">ID</option>
+        <option value="1">Zahl Name</option>
+        <option value="2">Titel Name</option>
+        <option value="3">ProduktartTitel</option>
+
+    </select>
+</div>
+<div class="col-md-11">
+</div>
+<div id="dvTable">
+    <table id="EmployeeList" class="table table-bordered table-condensed">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Titel)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Zahl)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.ProduktartTitel)
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>@item.Titel</td>
+
+                    <td>@item.Zahl</td>
+                    <td>@item.ProduktartTitel</td>
+                    <td>
+                        <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
+                        <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
+                        <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
+
+@*@section scripts {
+        <script src="@Url.Content("~/js/jquery.filtertable.min.js")" type="text/javascript"></script>
+        <script type="text/javascript">
+            $(document).ready(function () {
+
+                $('#EmployeeList').filterTable({ ignoreClass: 'no-filter' });
+                $('#ddlFilterColumns').change(function () {
+                    var index = $(this).val();
+                    alert(index);
+                    if (index == "")
+                        $('#EmployeeList td').removeClass('no-filter');
+                    else {
+                        $('#EmployeeList>tbody>tr>td').addClass('no-filter');
+                        $('#EmployeeList>tbody>tr').each(function () {
+                            $('td:eq(' + index + ')', this).removeClass('no-filter');
+                        });
+                    }
+                });
+            });
+        </script>
+    }*@
+
+
+@section scripts {
+
+
+
+    <script type="text/javascript">
+
+        $(document).ready(function () {
+           
+            //$('#EmployeeList').filterTable();
+
+        });
+
+    </script>
+
 }
-    </tbody>
-</table>
