--- a/EinzelhandelCoreMVC/wwwroot/css/site.css
+++ b/EinzelhandelCoreMVC/wwwroot/css/site.css
@@ -54,3 +54,19 @@ body {
   height: 60px;
   line-height: 60px; /* Vertically center the text there */
 }
+.filter-table .quick {
+    margin-left: 0.5em;
+    font-size: 0.8em;
+    text-decoration: none;
+}
+
+.fitler-table .quick:hover {
+    text-decoration: underline;
+}
+
+td.alt {
+    background-color: #ffc;
+    background-color: rgba(255, 255, 0, 0.2);
+}
+
+
