--- a/EinzelhandelCoreMVC/Views/Shared/_Layout.cshtml
+++ b/EinzelhandelCoreMVC/Views/Shared/_Layout.cshtml
@@ -30,17 +30,15 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
+                       
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Produktarts" asp-action="Index">Produktart</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Produkts" asp-action="Index">Produkt</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark"  asp-area="" asp-controller="Kundes" asp-action="Index">Kunde</a>
                         </li>
                     </ul>
                 </div>
@@ -84,5 +82,6 @@
 
     <script src="~/js/jquery.filtertable.min.js" type="text/javascript"></script>
     @RenderSection("Scripts", required: false)
+    
 </body>
 </html>
