--- a/EinzelhandelCoreMVC/Views/Shared/_Layout.cshtml
+++ b/EinzelhandelCoreMVC/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
-                       
+
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Produktarts" asp-action="Index">Produktart</a>
                         </li>
@@ -38,7 +38,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Produkts" asp-action="Index">Produkt</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark"  asp-area="" asp-controller="Kundes" asp-action="Index">Kunde</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Kundes" asp-action="Index">Kunde</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Bons" asp-action="Index">Bon</a>
                         </li>
                     </ul>
                 </div>
