--- a/EinzelhandelCoreMVC/Views/Bons/Create.cshtml
+++ b/EinzelhandelCoreMVC/Views/Bons/Create.cshtml
@@ -18,6 +18,8 @@
                 <span asp-validation-for="Datum" class="text-danger"></span>
             </div>
             <div class="form-group">
+                Wenn die Rechnung ein Kauf ist
+                Aktivieren Sie das Kontrollkästchen
                 <div class="checkbox">
                     <label>
                         <input asp-for="Art" /> @Html.DisplayNameFor(model => model.Art)
