--- a/EinzelhandelCoreMVC/Views/Bons/Details.cshtml
+++ b/EinzelhandelCoreMVC/Views/Bons/Details.cshtml
@@ -17,10 +17,10 @@
             @Html.DisplayFor(model => model.Datum)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Art)
+            @Html.DisplayNameFor(model => model.ArtBon)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Art)
+            @Html.DisplayFor(model => model.ArtBon)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.KundeTitel)
