--- a/EinzelhandelCoreMVC/Views/Details/Create.cshtml
+++ b/EinzelhandelCoreMVC/Views/Details/Create.cshtml
@@ -13,6 +13,22 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="BonID" />
+
+            <div class="form-group">
+                @Html.LabelFor(x => Model.ProduktartID, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-5">
+                    @Html.DropDownListFor(x => Model.ProduktartID, new SelectList(Model.Produktarts, "Value", "Text"), htmlAttributes: new { @class = "form-control", id = "ProduktartID" })
+                    @Html.ValidationMessageFor(x => x.ProduktartID, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(x => Model.ProduktID, htmlAttributes: new { @class = "control-label col-md-2" })
+
+                @Html.DropDownListFor(x => Model.ProduktID, new SelectList(Model.Produkts, "Value", "Text"), htmlAttributes: new { @class = "form-control", id = "ProduktID" })
+                @Html.ValidationMessageFor(x => x.ProduktID, "", new { @class = "text-danger" })
+
+            </div>
+
             <div class="form-group">
                 <label asp-for="Zahl" class="control-label"></label>
                 <input asp-for="Zahl" class="form-control" />
@@ -28,13 +44,7 @@
                 <input asp-for="Ermäßigung" class="form-control" />
                 <span asp-validation-for="Ermäßigung" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                @Html.LabelFor(x => Model.ProduktID, htmlAttributes: new { @class = "control-label col-md-2" })
 
-                @Html.DropDownListFor(x => Model.ProduktID, new SelectList(Model.Produkts, "Value", "Text"), htmlAttributes: new { @class = "form-control", id = "ProduktID" })
-                @Html.ValidationMessageFor(x => x.ProduktID, "", new { @class = "text-danger" })
-
-            </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
@@ -48,4 +58,38 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
+
+@section Scripts {
+  
+<script type="text/javascript" src="~/js/bootstrap.min.js"></script>
+    <script type="text/javascript">
+        $('#Country').change(function () {
+
+                var selectedProduktart = $("#produktart").val();
+                var produktsSelect = $('#produkt');
+                produktssSelect.empty();
+            if (selectedCountry != null && selectedCountry != '') {
+
+                    $.getJSON('@Url.Action("GetProdukts")', { id: selectedProduktart }, function (produkts) {
+                        if (produkts != null && !jQuery.isEmptyObject(produkts))
+                        {
+                            produktsSelect.append($('<option/>', {
+
+                                value: null,
+                                text: ""
+                            }));
+                            $.each(produkts, function (index, produkt) {
+                                produktsSelect.append($('<option/>', {
+                                    value: region.Value,
+                                    text: region.Text
+                                }));
+                            });
+                        };
+
+
+                    });
+                }
+            });
+    </script>
 }
