set ddl cascade

--- a/EinzelhandelCoreMVC/Views/Details/Delete.cshtml
+++ b/EinzelhandelCoreMVC/Views/Details/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model EinzelhandelCoreMVC.Models.Detail
+﻿@model EinzelhandelCoreMVC.ModelView.DetailDetail
 
 @{
     ViewData["Title"] = "Delete";
@@ -34,6 +34,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="ID" />
         <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index"  >Back to List</a>
+        <a asp-action="Index" asp-route-id="@Model.BonID" >Back to List</a>
     </form>
 </div>
