--- a/EinzelhandelCoreMVC/Views/Details/Create.cshtml
+++ b/EinzelhandelCoreMVC/Views/Details/Create.cshtml
@@ -16,10 +16,10 @@
 
             <div class="form-group">
                 @Html.LabelFor(x => Model.ProduktartID, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-5">
+                
                     @Html.DropDownListFor(x => Model.ProduktartID, new SelectList(Model.Produktarts, "Value", "Text"), htmlAttributes: new { @class = "form-control", id = "ProduktartID" })
                     @Html.ValidationMessageFor(x => x.ProduktartID, "", new { @class = "text-danger" })
-                </div>
+                
             </div>
             <div class="form-group">
                 @Html.LabelFor(x => Model.ProduktID, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -57,32 +57,33 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
-
-@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
+ 
   
-<script type="text/javascript" src="~/js/bootstrap.min.js"></script>
+ <script type="text/javascript" src="~/js/bootstrap.min.js"></script>
     <script type="text/javascript">
-        $('#Country').change(function () {
+        $('#ProduktartID').change(function () {
 
-                var selectedProduktart = $("#produktart").val();
-                var produktsSelect = $('#produkt');
-                produktssSelect.empty();
-            if (selectedCountry != null && selectedCountry != '') {
+                var selectedProduktart = $("#ProduktartID").val();
+               
+                var produktsSelect = $('#ProduktID');
+                produktsSelect.empty();
+            if (selectedProduktart != null && selectedProduktart != '') {
 
                     $.getJSON('@Url.Action("GetProdukts")', { id: selectedProduktart }, function (produkts) {
+                       
                         if (produkts != null && !jQuery.isEmptyObject(produkts))
                         {
+                            
                             produktsSelect.append($('<option/>', {
-
                                 value: null,
-                                text: ""
+                                text: "entekhab kon"
                             }));
-                            $.each(produkts, function (index, produkt) {
+                            $.each(produkts, function (index, ProduktID) {
+                                
                                 produktsSelect.append($('<option/>', {
-                                    value: region.Value,
-                                    text: region.Text
+                                    value: ProduktID.value,
+                                    text: ProduktID.text
                                 }));
                             });
                         };
