--- a/EinzelhandelCoreMVC/Views/Details/Details.cshtml
+++ b/EinzelhandelCoreMVC/Views/Details/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model EinzelhandelCoreMVC.Models.Detail
+﻿@model EinzelhandelCoreMVC.ModelView.DetailDetail
 
 @{
     ViewData["Title"] = "Details";
@@ -32,5 +32,5 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.ID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" asp-route-id="@Model.BonID">Back to List</a>
 </div>
