--- a/EinzelhandelCoreMVC/Views/Details/Edit.cshtml
+++ b/EinzelhandelCoreMVC/Views/Details/Edit.cshtml
@@ -15,6 +15,20 @@
             <input type="hidden" asp-for="ID" />
             <input type="hidden" asp-for="BonID" />
             <div class="form-group">
+                @Html.LabelFor(x => Model.ProduktartID, htmlAttributes: new { @class = "control-label col-md-2" })
+
+                @Html.DropDownListFor(x => Model.ProduktartID, new SelectList(Model.Produktarts, "Value", "Text"), htmlAttributes: new { @class = "form-control", id = "ProduktartID" })
+                @Html.ValidationMessageFor(x => x.ProduktartID, "", new { @class = "text-danger" })
+
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(x => Model.ProduktID, htmlAttributes: new { @class = "control-label col-md-2" })
+
+                @Html.DropDownListFor(x => Model.ProduktID, new SelectList(Model.Produkts, "Value", "Text"), htmlAttributes: new { @class = "form-control", id = "ProduktID" })
+                @Html.ValidationMessageFor(x => x.ProduktID, "", new { @class = "text-danger" })
+
+            </div>
+            <div class="form-group">
                 <label asp-for="Zahl" class="control-label"></label>
                 <input asp-for="Zahl" class="form-control" />
                 <span asp-validation-for="Zahl" class="text-danger"></span>
@@ -42,4 +56,38 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
+    <script type="text/javascript" src="~/js/bootstrap.min.js"></script>
+    <script type="text/javascript">
+        $('#ProduktartID').change(function () {
+
+                var selectedProduktart = $("#ProduktartID").val();
+
+                var produktsSelect = $('#ProduktID');
+                produktsSelect.empty();
+            if (selectedProduktart != null && selectedProduktart != '') {
+
+                    $.getJSON('@Url.Action("GetProdukts")', { id: selectedProduktart }, function (produkts) {
+
+                        if (produkts != null && !jQuery.isEmptyObject(produkts))
+                        {
+
+                            produktsSelect.append($('<option/>', {
+                                value: null,
+                                text: "entekhab kon"
+                            }));
+                            $.each(produkts, function (index, ProduktID) {
+
+                                produktsSelect.append($('<option/>', {
+                                    value: ProduktID.value,
+                                    text: ProduktID.text
+                                }));
+                            });
+                        };
+
+
+                    });
+                }
+            });
+    </script>
 }
