set ddl edit Detail

--- a/EinzelhandelCoreMVC/Views/Details/Create.cshtml
+++ b/EinzelhandelCoreMVC/Views/Details/Create.cshtml
@@ -77,7 +77,7 @@
                             
                             produktsSelect.append($('<option/>', {
                                 value: null,
-                                text: "entekhab kon"
+                                text: "Wählen Sie den Produkt"
                             }));
                             $.each(produkts, function (index, ProduktID) {
                                 
