--- a/EinzelhandelCoreMVC/Views/Details/Index.cshtml
+++ b/EinzelhandelCoreMVC/Views/Details/Index.cshtml
@@ -11,8 +11,7 @@
            FullName
         </dt>
         <dd>
-        
-
+        @Model.First().FullName
         </dd>
 </div>
 <p>
@@ -29,6 +28,12 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Ermäßigung)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model=>model.ProduktartTitel)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model=>model.ProduktTitel)
             </th>
             <th></th>
         </tr>
@@ -47,6 +52,13 @@
                     @Html.DisplayFor(modelItem => item.Ermäßigung)
                 </td>
                 <td>
+                    @Html.DisplayFor(modelitem=>item.ProduktartTitel)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem=>item.ProduktTitel)
+                </td>
+                
+                <td>
                     <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
                     <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
                     <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
@@ -55,3 +67,6 @@
         }
     </tbody>
 </table>
+<div>
+    <a asp-action="Index"  asp-controller="Bon">Back to Bon List</a>
+</div>
